--- a/sway/config
+++ b/sway/config
@@ -65,19 +65,19 @@ input "type:touchpad" {
 ### Key bindings
 # Fn Keys:
 # XF86 multimedia key symbols list: https://wiki.linuxquestions.org/wiki/XF86_keyboard_symbols
-    bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
-    bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
+    bindsym --locked XF86MonBrightnessDown exec brightnessctl -e set 5%-
+    bindsym --locked XF86MonBrightnessUp exec brightnessctl -e set 5%+
 
-    bindsym --locked XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') +5%
-    bindsym --locked XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume $(pacmd list-sinks |awk '/* index:/{print $3}') -5%
-    bindsym --locked XF86AudioMute exec --no-startup-id pactl set-sink-mute $(pacmd list-sinks |awk '/* index:/{print $3}') toggle
+    bindsym --locked XF86AudioMute exec wpctl set-mute @DEFAULT_SINK@ toggle
+    bindsym --locked XF86AudioLowerVolume exec wpctl set-volume @DEFAULT_SINK@ .05- -l 1.2
+    bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume @DEFAULT_SINK@ .05+ -l 1.2
     bindsym --locked XF86AudioPlay exec playerctl play-pause
     bindsym --locked XF86AudioNext exec playerctl next
     bindsym --locked XF86AudioPrev exec playerctl previous
 #
 # Basics:
 #
-    # Start a terminal
+# Start a terminal
     bindsym $mod+t exec $term
 
     # Kill focused window
