--- a/sway/config
+++ b/sway/config
@@ -1,4 +1,4 @@
-# Default config for sway
+# mradhyaf's config for sway
 #
 # Copy this to ~/.config/sway/config and edit it to your liking.
 #
@@ -6,7 +6,7 @@
 
 ### Variables
 #
-# Logo key. Use Mod1 for Alt.
+# Logo key (Mod4). Use Mod1 for Alt.
 set $mod Mod4
 # Home row direction keys, like vim
 set $left h
@@ -15,6 +15,8 @@ set $up k
 set $right l
 # Your preferred terminal emulator
 set $term kitty
+# Your preferred browser
+set $browser firefox
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
@@ -23,34 +25,31 @@ set $menu dmenu_path | wmenu | xargs swaymsg exec --
 set $laptop eDP-1
 
 ### Output configuration
-# 4k Monitor
-output DP-1 pos 2240 0 res 3840x2160
+# External Display
+# USB-C output to the right of $laptop
+# output DP-1 pos 2240 0 res 2560x1440
+
+# HDMI output to the right of $laptop
+output HDMI-A-1 pos 2240 0 res 2560x1440
+
 # Built-in Display
 output $laptop pos 0 0 res 2240x1400
 bindswitch --reload --locked lid:on output $laptop disable
 bindswitch --reload --locked lid:off output $laptop enable
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-# output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-output * bg ~/.local/share/backgrounds/snapsaga-3Dy3T1dn7jk-unsplash.jpg fill
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
+
+# Wallpaper. Replace or soft-link the wallpaper file
+output * bg $HOME/.config/sway/wallpaper fill
+output * adaptive_sync on
+
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 ### Idle configuration
-#
-# Example configuration:
-#
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
+exec swayidle -w \
+         timeout 300 'swaylock -f -c 000000' \
+         timeout 300 'swaymsg "output * power off"' \
+         resume 'swaymsg "output * power on"' \
+         before-sleep 'swaylock -f -c 000000'
+# Read `man swayidle` for more information about this section.
 
 ### Input configuration
 input "type:touchpad" {
@@ -65,7 +64,6 @@ input "type:touchpad" {
 
 ### Key bindings
 # Fn Keys:
-# XF86 multimedia key symbols list: https://wiki.linuxquestions.org/wiki/XF86_keyboard_symbols
     bindsym --locked XF86MonBrightnessDown exec brightnessctl -e set 5%-
     bindsym --locked XF86MonBrightnessUp exec brightnessctl -e set 5%+
 
@@ -75,11 +73,15 @@ input "type:touchpad" {
     bindsym --locked XF86AudioPlay exec playerctl play-pause
     bindsym --locked XF86AudioNext exec playerctl next
     bindsym --locked XF86AudioPrev exec playerctl previous
-#
+# XF86 multimedia key symbols list: https://wiki.linuxquestions.org/wiki/XF86_keyboard_symbols
+
 # Basics:
-#
-# Start a terminal
+
+    # Start a terminal
     bindsym $mod+t exec $term
+
+    # Start a browser
+    bindsym $mod+b exec $browser
 
     # Kill focused window
     bindsym $mod+Shift+q kill
@@ -156,13 +158,13 @@ input "type:touchpad" {
     # You can "split" the current object of your focus with
     # $mod+b or $mod+v, for horizontal and vertical splits
     # respectively.
-    bindsym $mod+b splith
-    bindsym $mod+v splitv
+    # bindsym $mod+b splith
+    # bindsym $mod+v splitv
 
     # Switch the current container between different layout styles
-    bindsym $mod+s layout stacking
-    bindsym $mod+w layout tabbed
-    bindsym $mod+e layout toggle split
+    # bindsym $mod+s layout stacking
+    # bindsym $mod+w layout tabbed
+    # bindsym $mod+e layout toggle split
 
     # Make the current focus fullscreen
     bindsym $mod+f fullscreen
@@ -233,7 +235,6 @@ bar {
     # }
 }
 
-include /etc/sway/config.d/*
+include $HOME/.config/sway/config.d/*
 
-# Clamshell mode script
-exec_always $HOME/.config/sway/clamshell.sh
+exec_always $HOME/.config/sway/script.d/clamshell.sh
