--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -8,7 +8,7 @@
 # title=foot
 # locked-title=no
 
-font=JetBrainsMono Nerd Font:size=12
+font=JetBrainsMono Nerd Font:size=14
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -21,9 +21,9 @@ font=JetBrainsMono Nerd Font:size=12
 # underline-thickness=<font underline thickness>
 # strikeout-thickness=<font strikeout thickness>
 # box-drawings-uses-font-glyphs=no
-dpi-aware=yes
+# dpi-aware=yes
 
-# initial-window-size-pixels=700x500  # Or,
+initial-window-size-pixels=1000x800  # Or,
 # initial-window-size-chars=<COLSxROWS>
 # initial-window-mode=windowed
 # pad=0x0                             # optionally append 'center'
