foot: move colors to themes dir

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,5 +1,5 @@
 # -*- conf -*-
 
-font=JetBrainsMono Nerd Font:size=14
-initial-window-size-pixels=1000x800
-include=~/.config/foot/everforest-dark-hard
+font=JetBrainsMono Nerd Font:size=14, Noto Sans Mono:size=14
+initial-window-size-chars=88x33
+include=~/.config/foot/themes/everforest-dark-hard
