foot: caskaydia cove font

--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,5 +1,6 @@
 # -*- conf -*-
 
-font=JetBrainsMono Nerd Font:size=14, Noto Sans Mono:size=14
+font=CaskaydiaCove Nerd Font:size=14, JetBrainsMono Nerd Font:size=14, NotoSansM Nerd Font:size=14
+line-height=20
 initial-window-size-chars=88x33
 include=~/.config/foot/themes/everforest-dark-medium
