--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -3,4 +3,6 @@
 font=CaskaydiaCove Nerd Font:size=14, JetBrainsMono Nerd Font:size=14, NotoSansM Nerd Font:size=14
 line-height=20
 initial-window-size-chars=88x33
-include=~/.config/foot/themes/everforest-dark-medium
+
+# theme
+include=/usr/share/foot/themes/gruvbox-dark
