updates idk what

--- a/foot/.config/foot/foot.ini
+++ b/foot/.config/foot/foot.ini
@@ -1,6 +1,6 @@
 # -*- conf -*-
 
-font=CaskaydiaCove Nerd Font:size=14, JetBrainsMono Nerd Font:size=14, NotoSansM Nerd Font:size=14
+font=Cascadia Code NF:size=14, CaskaydiaCove Nerd Font:size=14, JetBrainsMono Nerd Font:size=14, NotoSansM Nerd Font:size=14
 line-height=20
 initial-window-size-chars=88x33
 
